--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Beebryte",
   "license": "MIT",
   "devDependencies": {
-    "babel-loader": "^8.0.5",
+    "babel-core": "^6.26.3",
+    "babel-loader": "7",
     "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^1.0.1",
     "copy-webpack-plugin": "^4.6.0",
@@ -15,5 +16,8 @@
     "ts-loader": "^5.3.3",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1"
+  },
+  "dependencies": {
+    "typescript": "^3.2.4"
   }
 }
